# Musig2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/cli/: mod.rs  node.rs
src/cli/p2p/: behaviour.rs  mod.rs  msg.rs  transport.rs
src/cli/party/: async_protocol.rs  broadcast.rs  instance.rs  mod.rs  musig2.rs  musig2_instance.rs  musig2_party.rs  party.rs  rounds.rs  session.rs  store_err.rs  watcher.rs
src/cli/party/sim/: async_simulation.rs  benchmark.rs  mod.rs  simulation.rs
src/cli/party/traits/: message.rs  mod.rs  state_machine.rs
src/cli/protocals/: error.rs  key.rs  mod.rs  musig2.rs  musig2_test.rs  signature.rs  signature_test.rs
