[package]
name = "musig2"
version = "0.1.0"
authors = ["The ChainX Authors"]
description = "A implementations of Simple Two-Round Schnorr Multi-Signatures."
edition = "2018"
license = "GPL-3.0"

[dependencies]
libsecp256k1 = { version = "0.3.5", default-features = false, features = ["hmac"] }
light-bitcoin-schnorr = { git = "https://github.com/chainx-org/light-bitcoin", branch = "support-schnorr"}
libp2p = { version = "0.39.1", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.0.1", features = ["full"] }
async-stream = { version = "0.3.0", optional = true }
futures = { version = "0.3.16", optional = true }
arrayref = {version = "0.3.6"}
digest = { version = "0.9.0", default-features = false }
sha2 = { version = "0.9.5", default-features = false }
hex = {version = "0.4.3"}
rand = "0.8.4"
serde = {version = "=1.0", features = ["derive"] }
serde_json = "^1.0"
serde_derive = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4.0"
void = { default-features = false, version = "1.0" }
rand_core = { version = "0.6.3", default-features = false }
thiserror = "1.0.26"
tracing = { default-features = false, features = ["log"], version = "0.1" }
tracing-futures = { default-features = false, features = ["std-future", "std", "futures-03"], version = "0.2" }

[features]
default = ["async-runtime"]
async-runtime = ["futures", "async-stream"]
